Prevents calendar icon from disappearing after being clicked in high contrast mode

--- a/src/stylesheets/elements/form-controls/_date-picker.scss
+++ b/src/stylesheets/elements/form-controls/_date-picker.scss
@@ -47,6 +47,10 @@ $date-picker-max-width: "mobile";
 .usa-date-picker--active {
   .usa-date-picker__button {
     background-color: #f0f0f0;
+
+    @media (forced-colors: active) {
+      background-color: buttontext;
+    }
   }
 
   .usa-date-picker__calendar {
